# zeroterm

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml
src/: app.rs  auth.rs  config.rs  debug.rs  demo.rs  email.rs  gmail.rs  imap_client.rs  main.rs
src/ui/: render.rs  widgets.rs
