[package]
name = "zeroterm"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
google-gmail1 = "6"
yup-oauth2 = "11"
hyper = "1"
hyper-rustls = "0.27"
hyper-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"

[dev-dependencies]
mockall = "0.13"
